# housematching

./: .babelrc  .env  .eslintrc.js  .eslintrc.json  App.tsx  CMakeLists.txt  app.json  babel.config.js  eslint.config.js  firebaseConfig.tsx  index.js  index.mjs  index.web.js  jest.d.ts  jsx.d.ts  metro.config.cjs  metro.config.js  package-lock.json  package.json  server.js  setupNavScreen.ts  setupNavScreen.tsx  tsconfig.json  types.tsx  webpack.config.js
UserAuthentication/: FirebaseConfig.ts
android/: settings.gradle
android/app/: build.gradle
backend/: .env  database.js  package-lock.json  package.json  server.js
backend/config/: db.js
backend/controllers/: authController.js
backend/models/: Amenities.js  Location.js  Message.js  Notification.js  Property.js  Selection.js  User.js
backend/routes/: amenities.js  auth.js  favorites.js  location.js  messages.js  notifications.js  selection.js  user.js
backend/utils/: comparePassword.js  hashPassword.js  sendEmail.js
ios/: Podfile  RNScreens.podpec  RNScreens.podspec
ios/HouseMatching/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
ios/HouseMatching.xcodeproj/: project.pbxproj
ios/HouseMatching.xcworkspace/: contents.xcworkspacedata
ios/patches/: rct-folly-time-h.patch
macos/: Podfile
macos/HouseMatching-macOS/: AppDelegate.mm
navigation/: AppNavigator.tsx
property-selection-api/: package-lock.json  package.json
routes/: auth.js  backendRoutesIntoServer.js  favorites.js  location.js  routes:auth.js
src/: index.mjs  index.ts
utils/: commonStyles.ts  commonStyles.tsx
(+63 files in other folders)
